pressing spacebar and moving before the action has timed out will no longer leave behind a lumberjack and added functional life bar

--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,29 @@
 *{
   box-sizing: border-box;
+  font-family: 'Press Start 2P',cursive;
   }
 
 
 #grid{
+  background-image: url('../images/grass.png');
+  background-repeat: repeat;
   width: 500px;
   height: 500px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: auto;
+
   }
 
 #grid div{
   border: 1px solid thistle;
-  width: 50px;
-  height: 50px;
+  width: 10%;
+  height: 10%;
+  display: inline-block;
   }
 
 .tree {
-  background-color: olive;
   background-image: url('../images/tree.png');
   height: 100px;
   width: 100px;
@@ -27,7 +32,7 @@
   }
 .bear{
   background-image: url('../images/enemyBear.gif');
-  background-color: brown;
+  background-color: yellow;
   height: 100px;
   width: 100px;
   background-size: contain;
@@ -37,6 +42,7 @@
 
 .lumberjack{
   background-image: url('../images/lumberjack.gif');
+  background-color: yellow;
   height: 100px;
   width: 100px;
   background-size: contain;
@@ -69,14 +75,20 @@
 }
 
 #lifebar{
-  width: 500px;
+  width: 400px;
   height: 50px;
-  margin: 20px auto;
-  border: 1px solid black;
+  margin: 20px 0px 20px 260px;
+  text-align: right;
   }
 
 
   .messageBox {
     width: 100%;
     height: 143px;
-    text-align: center; }
+    text-align: center;
+    line-height: 30px;
+    font-size: 36px;
+    color: dodgerBlue;
+    border-radius: 10px;
+
+  }
